microservices/gateway/k8s/req_auth_override.yml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: gateway-ms-auth-override 
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: gateway-ms
  jwtRules: []
